Update assign .html

--- a/assign .html
+++ b/assign .html
@@ -78,6 +78,6 @@
         <p>There is a wide range of selectors available. Two of the most commonly used are the class and ID.
             Both are used to target elements to which a style should be applied. </p>
         </div>
-    <a href="https://www.prepbytes.com/">prepbyte Home</a>
+    <a href="https://www.prepbytes.com/">prepbytes Home</a>
 </body>
 </html>
